--- a/app/src/main/res/layout/sheet_music_layout.xml
+++ b/app/src/main/res/layout/sheet_music_layout.xml
@@ -36,6 +36,13 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="save" />
+
+        <Button
+            android:id="@+id/chord"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="chord" />
     </LinearLayout>
 
 </LinearLayout>
