--- a/app/src/main/res/layout/player_toolbar.xml
+++ b/app/src/main/res/layout/player_toolbar.xml
@@ -10,39 +10,44 @@
     android:layout_height="@dimen/toolbar_height"
     android:layout_marginStart="8dp"
     android:layout_marginTop="4dp"
-    android:layout_marginEnd="8dp"
-    android:orientation="horizontal">
+    android:layout_marginEnd="8dp">
+
+    <ImageButton
+        android:id="@+id/btn_settings"
+        style="@style/ToolbarButtonStyle"
+        android:contentDescription="@string/settings"
+        android:src="@drawable/ic_settings" />
 
     <ImageButton
         android:id="@+id/btn_back"
         style="@style/ToolbarButtonStyle"
-        android:src="@drawable/ic_back"
-        android:contentDescription="@string/back" />
+        android:contentDescription="@string/back"
+        android:src="@drawable/ic_back" />
 
     <ImageButton
         android:id="@+id/btn_replay"
         style="@style/ToolbarButtonStyle"
-        android:src="@drawable/ic_replay"
-        android:contentDescription="@string/replay" />
+        android:contentDescription="@string/replay"
+        android:src="@drawable/ic_replay" />
 
     <ImageButton
         android:id="@+id/btn_play"
         style="@style/ToolbarButtonStyle"
+        android:contentDescription="@string/play"
         android:scaleY="1.5"
-        android:src="@drawable/ic_play"
-        android:contentDescription="@string/play" />
+        android:src="@drawable/ic_play" />
 
     <ImageButton
         android:id="@+id/btn_rewind"
         style="@style/ToolbarButtonStyle"
-        android:src="@drawable/ic_rewind"
-        android:contentDescription="@string/rewind" />
+        android:contentDescription="@string/rewind"
+        android:src="@drawable/ic_rewind" />
 
     <ImageButton
         android:id="@+id/btn_forward"
         style="@style/ToolbarButtonStyle"
-        android:src="@drawable/ic_forward"
-        android:contentDescription="@string/forward" />
+        android:contentDescription="@string/forward"
+        android:src="@drawable/ic_forward" />
 
     <TextView
         android:id="@+id/txt_speed"
@@ -65,9 +70,9 @@
     <Button
         android:id="@+id/btn_midi"
         style="@style/DisabledToolbarButton"
-        android:text="MIDI"
-        android:enabled="false"
         android:layout_width="80dp"
+        android:enabled="false"
+        android:text="MIDI"
         android:textSize="16sp" />
 
     <View
@@ -92,13 +97,8 @@
     <ImageButton
         android:id="@+id/btn_piano"
         style="@style/ToolbarButtonStyle"
-        android:src="@drawable/ic_piano"
-        android:contentDescription="@string/show_hide_piano" />
+        android:contentDescription="@string/show_hide_piano"
+        android:src="@drawable/ic_piano" />
 
-    <ImageButton
-        android:id="@+id/btn_settings"
-        style="@style/ToolbarButtonStyle"
-        android:src="@drawable/ic_settings"
-        android:contentDescription="@string/settings" />
 </LinearLayout>
 <!--</merge>-->
