--- a/app/src/main/res/layout/choose_song.xml
+++ b/app/src/main/res/layout/choose_song.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000000"
@@ -7,22 +9,22 @@
     android:focusableInTouchMode="true"
     android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/name_filter"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dip"
-        android:layout_marginTop="10dip"
-        android:layout_marginRight="10dip"
-        android:layout_marginBottom="10dip"
-        android:textColor="@android:color/white"
-        android:imeOptions="flagNoExtractUi"/>
-
-    <ListView android:id="@android:id/list"
+    <ListView android:id="@+id/list"
         android:background="#000000"
         android:layout_width="match_parent"
         android:layout_height="0dip"
         android:layout_weight="1" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/addMidiFileBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@android:drawable/ic_input_add" />
+
 
 </LinearLayout>
 
