--- a/app/src/main/res/layout/activity_recording.xml
+++ b/app/src/main/res/layout/activity_recording.xml
@@ -47,20 +47,15 @@
                 android:text="00:00:00"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="185dp"
+                android:layout_height="60dp"
+                app:srcCompat="@drawable/fourth_1" />
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="65dp">
-
-                <ImageView
-                    android:id="@+id/imageView"
-                    android:layout_width="185dp"
-                    android:layout_height="60dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.122"
-                    app:srcCompat="@drawable/sleep" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
