--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,16 +6,16 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <ListView
-        android:id="@+id/folderList"
+
+    <com.yarolegovich.discretescrollview.DiscreteScrollView
+        android:id="@+id/item_picker"
         android:layout_width="match_parent"
-        android:layout_height="500dp">
+        android:layout_height="500dp"
+        app:dsv_orientation="horizontal" />
 
-
-    </ListView>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
@@ -23,14 +23,23 @@
             android:id="@+id/addBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:clickable="true"
             android:text="ADD"
             app:srcCompat="@android:drawable/ic_input_add" />
 
         <Button
+            android:id="@+id/gogobtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="START" />
+
+        <Button
             android:id="@+id/quickBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:clickable="true"
             android:text="QUICK"
             app:srcCompat="@drawable/music_48" />
@@ -38,4 +47,8 @@
 
     </LinearLayout>
 
+
 </LinearLayout>
+
+
+
