--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,7 +11,12 @@
         <item name="material_drawer_selected_text">@color/primary</item>
     </style>
 
-    <style name="AppTheme" parent="@style/Theme.AppCompat.NoActionBar"/>
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar" >
+        // ...
+        <item name="android:background">@color/Bright_white</item>
+        <item name="android:button">@color/Tourmaline</item>
+    </style>
+
     <style name="PlayerTheme" parent="@style/Theme.AppCompat.NoActionBar.Fullscreen"/>
 
     <style name="ToolbarButtonStyle" parent="@android:style/Widget.Material.Button.Borderless">
