--- a/app/src/main/res/layout/choose_song_item.xml
+++ b/app/src/main/res/layout/choose_song_item.xml
@@ -1,24 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
-    android:background="#000000"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="@color/Phantom_Green"
+    android:orientation="horizontal">
 
-    <ImageView android:id="@+id/choose_song_icon"
-        android:background="#000000"
-        android:padding="8dip"
-        android:layout_width="48dip" 
-        android:layout_height="48dip" />
+    <ImageView
+        android:id="@+id/choose_song_icon"
+        android:layout_width="48dip"
+        android:layout_height="48dip"
+        android:background="@color/Phantom_Green"
+        android:padding="8dip" />
 
-    <TextView android:id="@+id/choose_song_name"
-        android:layout_gravity="center_vertical"
+    <TextView
+        android:id="@+id/choose_song_name"
         android:layout_width="0dip"
-        android:layout_weight="1.0"
         android:layout_height="wrap_content"
-        android:background="#000000"
-        android:textSize="14dip"
-        android:textColor="#f0f0f0" />
+        android:layout_gravity="center_vertical"
+        android:layout_weight="1.0"
+        android:background="@color/Phantom_Green"
+        android:textColor="@color/Smoke_Pine"
+        android:textSize="14dip" />
 
 </LinearLayout>
 
