--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -33,6 +33,7 @@
     <color name="Smoke_Pine">#3E6257</color>
 
 
-
+    <color name = "Navy_Peony">#223A5E</color>
+    <color name = "Dark_Sapphire">#262B37</color>
 
 </resources>
