--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,12 +8,50 @@
     android:orientation="vertical">
 
 
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="100dp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/albumname"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="albumname"
+            android:textColor="@color/Dark_Sapphire"
+            android:textSize="30sp" />
+
+        <TextView
+            android:id="@+id/numofsong"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="numofsong"
+            android:textColor="@color/Dark_Sapphire"
+            android:textSize="18sp" />
+    </LinearLayout>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="20dp" />
+
     <com.yarolegovich.discretescrollview.DiscreteScrollView
         android:id="@+id/item_picker"
         android:layout_width="match_parent"
-        android:layout_height="500dp"
-        app:dsv_orientation="horizontal" />
+        android:layout_height="wrap_content"
+        app:dsv_orientation="horizontal" >
 
+    </com.yarolegovich.discretescrollview.DiscreteScrollView>
+
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="40dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
