팝업엑티비티 수정

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,6 +27,7 @@
     <color name="Bright_white">#F4F9FF</color>
     <color name="Gray_Morn">#CABEB5</color>
 
+    <color name="message_color">#C2CFDD</color>
     <color name="Phantom_Green">#DCE4D7</color>
     <color name="Greenery">#88B04B</color>
     <color name="Medium_Green">#3C824E</color>
