--- a/app/src/main/res/layout/save_images_dialog.xml
+++ b/app/src/main/res/layout/save_images_dialog.xml
@@ -6,24 +6,26 @@
 
     <TextView
         android:id="@+id/save_images_descr"
-        android:layout_height="wrap_content"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dip"
         android:layout_marginLeft="20dip"
         android:layout_marginRight="20dip"
-        android:text="@string/save_images_descr_str"
         android:gravity="left"
+        android:text="@string/save_images_descr_str"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <EditText
         android:id="@+id/save_images_filename"
-        android:layout_height="wrap_content"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dip"
         android:layout_marginLeft="20dip"
         android:layout_marginRight="20dip"
-        android:scrollHorizontally="true"
         android:autoText="false"
         android:capitalize="none"
         android:gravity="fill_horizontal"
+        android:scrollHorizontally="true"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
 </LinearLayout>
