--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,6 +23,7 @@
     <color name="Ether">#9EB6B8</color>
     <color name="Faded_Denim">#798EA4</color>
     <color name="Tourmaline">#86A1A9</color>
+    <color name="darkblue">#DF8390AF</color>
 
     <color name="Bright_white">#F4F9FF</color>
     <color name="Gray_Morn">#CABEB5</color>
