--- a/app/src/main/res/layout/choose_song_item.xml
+++ b/app/src/main/res/layout/choose_song_item.xml
@@ -1,26 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/Phantom_Green"
+    android:layout_height="63dp"
     android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/choose_song_icon"
-        android:layout_width="48dip"
-        android:layout_height="48dip"
-        android:background="@color/Phantom_Green"
-        android:padding="8dip" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="61dp"
+        android:background="@drawable/round_item">
 
-    <TextView
-        android:id="@+id/choose_song_name"
-        android:layout_width="0dip"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_weight="1.0"
-        android:background="@color/Phantom_Green"
-        android:textColor="@color/Smoke_Pine"
-        android:textSize="14dip" />
+        <ImageView
+            android:id="@+id/choose_song_icon"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="25dp"
+            android:tint="@color/Smoke_Pine"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/like" />
+
+        <TextView
+            android:id="@+id/choose_song_name"
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:text="노래이름입니다"
+            android:textColor="@color/Smoke_Pine"
+            android:textSize="16dip"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/choose_song_icon"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
 
