--- a/app/src/main/res/layout/popup_addfolder.xml
+++ b/app/src/main/res/layout/popup_addfolder.xml
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:text="생성할 앨범명을 입력하세요"
+        android:text="앨범명을 입력하세요"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
