--- a/app/src/main/res/layout/activity_sheet_music2.xml
+++ b/app/src/main/res/layout/activity_sheet_music2.xml
@@ -214,4 +214,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageButton
+        android:id="@+id/inst_btn"
+        android:layout_width="41dp"
+        android:layout_height="41dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="50dp"
+        android:background="#00FFFFFF"
+        android:scaleType="fitXY"
+        android:src="@drawable/guitar"
+        android:tint="@color/Smoke_Pine"
+        app:layout_constraintBottom_toBottomOf="@+id/sheet2Folder"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
