--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,55 +8,29 @@
     android:orientation="vertical">
 
 
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="100dp" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/albumname"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="albumname"
-            android:textColor="@color/Dark_Sapphire"
-            android:textSize="30sp" />
-
-        <TextView
-            android:id="@+id/numofsong"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="numofsong"
-            android:textColor="@color/Dark_Sapphire"
-            android:textSize="18sp" />
-    </LinearLayout>
-
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="20dp" />
-
     <com.yarolegovich.discretescrollview.DiscreteScrollView
         android:id="@+id/item_picker"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:dsv_orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.283"
         tools:listitem="@layout/item_album_card">
 
     </com.yarolegovich.discretescrollview.DiscreteScrollView>
 
-
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="40dp" />
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/item_picker">
 
         <ImageButton
             android:id="@+id/renameButton"
@@ -115,7 +89,6 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-</LinearLayout>
-
+</androidx.constraintlayout.widget.ConstraintLayout>
 
 
