--- a/app/src/main/res/layout/item_album_card.xml
+++ b/app/src/main/res/layout/item_album_card.xml
@@ -1,20 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/cards"
-    android:layout_width="240dp"
-    android:layout_height="240dp"
-    android:layout_gravity="center"
-    android:layout_margin="4dp">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayout4"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="40dp"
+    android:orientation="vertical"
+    app:layout_constraintBottom_toTopOf="@+id/item_picker"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.5"
+    app:layout_constraintStart_toStartOf="parent">
+
+
+    <TextView
+        android:id="@+id/albumname"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="albumname"
+        android:textColor="@color/Dark_Sapphire"
+        android:textSize="30sp" />
+
+    <TextView
+        android:id="@+id/numofsong"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="numofsong"
+        android:textColor="@color/Dark_Sapphire"
+        android:textSize="18sp" />
+
+    <Space
+        android:layout_width="wrap_content"
+        android:layout_height="40dp" />
 
     <ImageView
-        android:id="@+id/image"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/Ether"
-        android:scaleType="centerCrop"
-        android:tint="#151A1F"
-        app:srcCompat="@drawable/folder" />
+        android:id="@+id/coverImageView"
+        android:layout_width="240dp"
+        android:layout_height="240dp" />
 
-
-</androidx.cardview.widget.CardView>
+</LinearLayout>
